fix huge project images on mobile

--- a/src/static/css/App.css
+++ b/src/static/css/App.css
@@ -562,6 +562,7 @@ tr {
 .projImage > img {
   width: 100%;
   height: 100%;
+  max-height: 50vh;
   object-fit: contain;
   border-radius: 1em;
 }
